--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Weather Forecast</string>
+    <string name="today">Today</string>
+    <string name="weekly">Weekly</string>
+    <string name="settings">Settings</string>
 </resources>
