adding the current weather user interface

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="today">Today</string>
     <string name="next_days">Next Days</string>
     <string name="settings">Settings</string>
+    <string name="loading">Loading</string>
+<!--    <string name="today">Today</string>-->
 </resources>
