--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="next_days">Next Days</string>
     <string name="settings">Settings</string>
     <string name="loading">Loading</string>
-<!--    <string name="today">Today</string>-->
+    <string name="location_settings">Location Settings</string>
+    <string name="manually_search_location">Manually search the location</string>
+    <string name="allow_app_location">Allow the app to get your location</string>
+    <!--    <string name="today">Today</string>-->
 </resources>
